fix quote align issue

--- a/style.css
+++ b/style.css
@@ -118,9 +118,14 @@ h1{
     background-color: #e5e7eb;
 }
 
+.quote div{
+    display: flex;
+    flex-direction: column;
+    max-width: 40%;
+    
+}
 
 .quote h2{
-    max-width: 45%;
     padding-top: 120px;
     font-size: 36px;
     font-weight: 300;
@@ -130,9 +135,10 @@ h1{
 
 .quote p{
     font-weight: bold;
-    text-align: right;
-    padding-left: 50px;
+    font-size: 20px;
+    margin-top: 50px;
     padding-bottom: 120px;
+    align-self: flex-end;
 }
 
 
@@ -157,7 +163,7 @@ h1{
 
 .blue-bg button{
     background-color: #3882F6;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     border-radius: 8px;
     padding: 8px 30px;
     color: #e5e7eb;
